--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -19014,7 +19014,7 @@ html.ie .tt-btn-col-close {
         top: 116px; }
       .tt-product:not(.tt-view) .tt-image-box img {
         width: 100%;
-        max-height: 228px;
+        height: 350px;
       }
       .tt-product:not(.tt-view) .tt-image-box .tt-img {
         -webkit-transition: opacity 0.3s ease-out;
